fixed homepage spacing

--- a/src/assets/scss/component/home/_showcase.scss
+++ b/src/assets/scss/component/home/_showcase.scss
@@ -3,6 +3,7 @@
 	transform: none !important;
 }
 .home-showcase {
+	margin-bottom: 200px;
 	.container{
 		color: $color-white;
 		position: relative;
